assets/css/style.css
html {
    scroll-behavior: smooth;
  
}

:target {
    scroll-margin-top: 30px;
}

:root {
    --primary-color: #888888;
    --secundary-color: #707070;
}

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    -webkit-user-drag: none;
    user-select: none;
    -moz-user-select: none;
    -webkit-user-select: none;
    -ms-user-select: none;
}

main {
    color: var(--primary-color);
    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", 
    Helvetica, Arial, "Lucida Grande", sans-serif;
    user-select: none;
}

.container {
    width: 60%;
    margin: 0 auto;
 
}

.hide {
    display: none;
}



/*      HEADER         */
.header-background{
    background-color: var(--secundary-color);

    clip-path: polygon(
        0 0,
        100% 0,
        100% 100%,
        0 65%
    )
}
.header {
    text-align: center;
    color: white ;
    padding: 60px 0 130px 0;

}

.header h2 {
    font-size: 20px;
    font-weight: 400;

}

.header h1 {
    font-size: 40px;
    margin-bottom: 20px;
}

.header h3 {
    font-size: 14px;
    margin-bottom: 60px;
    font-weight: 400;
}




/*      NAVBAR        */
.navbar-query {
    display: none;
}
.navbar, .navbar-query {
    margin: 0 20px;
}

.navbar ul, .navbar-query ul{
    list-style: none;
    display: flex;
    justify-content: center;
}

.navbar li, .navbar-query li {
    background-color: white;
    border-radius: 3px;
    box-shadow: 0px 5px 10px #00000029;
    text-align: center;
    margin: 0 20px;

}

.navbar ul li a, .navbar-query ul li a {
    text-decoration: none;
    color: var(--primary-color);
    font-size: 14px;
    padding: 12px 35px;
    display: block;

}





/*      SIGN-IN       */

.signin-section {
    display: flex;
    justify-content: space-between;
    padding-top: 20px;
}

.signin-section article {
    width: 63%;
    max-width: 520px;
    text-align: left;
}

.signin-section article h2 {
    font-size: 20px;
    margin-bottom: 20px;
    font-weight: 400;
}

.signin-section article p {
    font-size: 12px;
}

.signin-form {
    width: 37%;

}

.signin-form form {
    display: flex;
    flex-direction: column;
}

.signin-form label, .gender-opt{
    font-size: 12px;
    margin-bottom: 10px;

}

.signin-form label:not(:first-child){
    margin-top: 20px;
}

.signin-form input {

    padding: 5px;
    border: 1px solid var(--secundary-color);
}

.gender-opt input:last-child{
    margin-left: 40px;
    margin-top: 20px;
    margin-bottom: 10px;
}

.gender-opt input {
    
    margin-right: 3px;
    align-self: center;
}

.signin-form button {
    padding: 7px;
    font-size: 16px;
    color: var(--primary-color);
    background-color: white;
    border: 1px solid var(--secundary-color);
    border-radius: 4px;
    cursor: pointer;
}

.span-input-error{
    font-size: 12px;
    color: red;
}




/*        PRODUCTS         */

.products-section fieldset {
    border-top: 1px solid var(--secundary-color);
    border-bottom: none;
    border-left: none;
    border-right: none;
    text-align: center;
    margin-top: 80px;
}

.products-section fieldset legend {
    font-size: 18px;
    font-weight: bold;
    margin-left: calc(50% - 90px - 30px);
    padding: 0 20px;
}

.products-grid {
    margin-top: 50px;
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    gap: 40px;
}

#loading-box {
    width: 100%;
    height: 100%;
    align-items: center;
    justify-content: center;
    margin-top: 30px;
}

#loading {
    text-align: center;
}

.product-image {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 140px;
    border: 1px solid var(--secundary-color);
}

.product h3 {
    font-size: 14px;
    font-weight: 400;
    margin-top: 14px;
}

.product p {
    font-size: 12px;
    margin-top: 10px;
}

.product p:last-of-type {
    margin-top: 6px;
}

.product h2 {
    font-size: 16px;
    margin-top: 6px;
}

.product-btn {
    width: 100%;
    margin-top: 10px;
    padding: 6px;
    font-size: 16px;
    background-color: white;
    border: 1px solid var(--secundary-color);
    border-radius: 5px;
    color: var(--secundary-color);
    cursor: pointer;
}

.products-section button {
    margin-top: 10px;
    padding: 10px 30px;
    font-size: 16px;
    background-color: white;
    border: 1px solid var(--secundary-color);
    border-radius: 3px;
    color: var(--secundary-color);
    text-align: center;
    cursor: pointer;
}

.products-section .btn-request {
    display: flex;
    justify-content: center;
    padding: 50px 0 130px 0 ;
}


/*        SHARE        */

.share-section {
    text-align: center;
}

.share-section fieldset {
    border-top: 1px solid var(--secundary-color);
    border-bottom: none;
    border-left: none;
    border-right: none;
    text-align: center;
}

.share-section fieldset legend {
    font-size: 18px;
    font-weight: bold;
    margin-left: calc(50% - 90px - 30px);
    padding: 0 20px;
}

.share-form {
    display: flex;
}

.share-section .share-text {
    padding-top: 45px;
}

.share-section .share-text p {
    font-size: 14px;
}

.share-section form {
    padding-top: 40px;
    font-size: 12px;
    display: flex;
    flex-direction: row;
    justify-content: center;
}

.share-section form label {
    display: flex;
    flex-direction: column;
    text-align: left;
    margin-left: 40px;
}

.share-section form input {
    width: 340px; 
    padding: 5px;
    margin-top: 10px;
}

.share-section button {
    font-size: 16px;
    padding: 10px 80px;
    width: 260px;
    background-color: white;
    border: 1px solid var(--secundary-color);
    border-radius: 3px;
    color: var(--secundary-color);
    text-align: center;
    margin-top: 50px ;
    margin-bottom: 70px;
    cursor: pointer;
}



/*      FOOTER       */

.footer {
    text-align: center;
    color: white ;
    padding: 160px 0 85px 0;
    background-color: var(--secundary-color);

    clip-path: polygon(
        100% 100%,
        0 100%,
        0 30%,
        100% 0
    );
}

.footer p {
    font-size:12px;
}

@media (max-width: 480px){
    :target {
        scroll-margin-top: 10px;
    }

    .header-background {
        position: relative
    }

    .header {
        text-align: start;
        padding: 60px 16px 130px 16px;
    }

    .container {
        width: 100%;
        margin: 0;
        padding: 0 16px;
    }

    .navbar {
        display: none;
    }

    .navbar-query {
        display: flex;
    }

    .navbar-query ul {
        width: 100%;
        display: grid;
        grid-template-columns: repeat(2, 1fr);
        position: absolute;
        top: 250px;
        margin: 0 auto;
    }

    .navbar-query ul li {
        width: 160px;
        border: 1px solid var(--secundary-color);
        margin: 10px 0;
    }

    .navbar-query ul li a {
        padding: 12px 10px;
    }

    .signin-section {
        flex-direction: column;
        margin-top: 40px;
    }

    .signin-section article {
        width: 100%;
        max-width: 520px;
        text-align: left;
        margin-bottom: 30px;
    }

    .signin-form {
        width: 100%;
        
    }

    .products-grid {
        margin-top: 50px;
        display: grid;
        grid-template-columns: repeat(1, 1fr);
        gap: 40px;
    }

    .product {
        display: flex;
        flex-direction: row-reverse;
        justify-content: space-between;
    }

    .product-image {
        width: 43%;
        height: 100%;
    }

    .product-info-wrap {
        width: 50%;

    }

    .product h3 {
        margin-top: 0;
    }

    .product button {
        padding: 6px;
    }

    .product p:first-of-type {
        display: none;
    }

    .share-form {
        display: flex;
        flex-direction: column;
    }

    .share-section form label {
        display: flex;
        flex-direction: column;
        text-align: left;
        margin-left: 0px;
        width: 100%;
    }

    .share-section form label:last-of-type {
        margin-top: 20px ;
    }

    .footer {
        padding: 80px 0 50px 0;
    }
}

